--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
+  "main": "dist/out-tsc/main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build & tsc",
+    "electron": "concurrently  \"SET BROWSER=none && npm run start\" \"npm run build && electron .\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -24,7 +26,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
+    "@types/electron-is-dev": "^0.3.0",
     "core-js": "^2.5.4",
+    "electron-is-dev": "^1.0.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
@@ -41,7 +45,9 @@
     "@types/node": "~10.12.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "electron": "^4.0.4",
     "codelyzer": "~4.5.0",
+    "concurrently": "^4.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.4",
@@ -51,8 +57,9 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~8.0.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint": "~5.12.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.2.2"
   },
   "description": "An Ionic project"
 }
