--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^7.2.4",
+    "@angular/cdk": "^7.3.2",
     "@angular/common": "^7.2.2",
     "@angular/core": "^7.2.2",
     "@angular/forms": "^7.2.2",
     "@angular/http": "^7.2.2",
+    "@angular/material": "^7.3.2",
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
