--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
+    "@ngrx/effects": "^7.2.0",
+    "@ngrx/store": "^7.2.0",
     "@types/electron-is-dev": "^0.3.0",
     "core-js": "^2.5.4",
     "electron-is-dev": "^1.0.1",
