--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/electron-is-dev": "^0.3.0",
     "core-js": "^2.5.4",
     "electron-is-dev": "^1.0.1",
+    "googleapis": "^37.2.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
@@ -41,15 +42,15 @@
     "@angular-devkit/schematics": "~7.2.3",
     "@angular/cli": "~7.2.3",
     "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
+    "@angular/compiler-cli": "^7.2.5",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.3.0",
-    "@types/node": "~10.12.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "electron": "^4.0.4",
+    "@types/node": "~10.12.0",
     "codelyzer": "~4.5.0",
     "concurrently": "^4.1.0",
+    "electron": "^4.0.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.4",
@@ -59,8 +60,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~8.0.0",
-    "tslint-config-prettier": "^1.18.0",
     "tslint": "~5.12.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "~3.2.2"
   },
   "description": "An Ionic project"
