--- a/src/electron/tsconfig.json
+++ b/src/electron/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "../www/electron",
+    "outDir": "../../www/electron",
     "sourceMap": true,
     "declaration": false,
     "module": "commonjs",
