--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "downlevelIteration": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"]
+    "lib": ["es2018", "dom"],
   }
 }
