--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "electron-is-dev": "^1.0.1",
     "google-auth-library": "^3.1.0",
     "googleapis": "^37.2.0",
+    "moment": "^2.24.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
