--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
-  "name": "xClipboard",
+  "name": "cloud-clips",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Gabriele Sato",
+  "homepage": "",
   "main": "www/electron/main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "electronBuild": "ionic build --prod -- --base-href ./ && tsc -p ./src/electron",
-    "electron": "concurrently  \"SET BROWSER=none && npm run start\" \"npm run electronBuild && electron .\"",
+    "ionicBuild": "ionic build --prod -- --base-href ./",
+    "electronBuild": "tsc -p ./src/electron",
+    "electron": "concurrently  \"SET BROWSER=none && npm run start\" \"npm run ionicBuild && npm run electronBuild && electron .\"",
+    "electronLight": "concurrently  \"SET BROWSER=none && npm run start\" \"npm run electronBuild && electron .\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "npm run ionicBuild && npm run electronBuild && electron-builder"
   },
   "build": {
     "appId": "com.infiniti.cloud-clips",
+    "productName": "cloud-clips",
+    "directories": {
+      "buildResources": "www"
+    },
     "files": [
-      "build/**/*",
+      "www/**/*",
       "node_modules/**/*"
     ],
-    "directories": {
-      "buildResources": "assets"
-    }
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
+    "extends": null
   },
   "private": true,
   "dependencies": {
@@ -42,6 +51,8 @@
     "@ngrx/effects": "^7.2.0",
     "@ngrx/store": "^7.2.0",
     "@types/electron-is-dev": "^0.3.0",
+    "@types/electron-store": "^1.3.0",
+    "@types/uuid": "^3.4.4",
     "core-js": "^2.5.4",
     "electron-is-dev": "^1.0.1",
     "electron-store": "^2.0.0",
@@ -51,6 +62,7 @@
     "moment": "^2.24.0",
     "npm": "^6.8.0",
     "rxjs": "~6.3.3",
+    "uuid": "^3.3.2",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
