--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,10 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "downlevelIteration": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom"],
+    "downlevelIteration": true,
+    "esModuleInterop": true
   }
 }
