--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "ng build",
     "ionicBuild": "ionic build --prod -- --base-href ./",
     "electronBuild": "tsc -p ./src/electron",
-    "electron": "concurrently  \"SET BROWSER=none && npm run start\" \"run electronBuild && electron .\"",
+    "electron": "concurrently  \"SET BROWSER=none && npm run start\" \"npm run electronBuild && electron .\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -90,7 +90,8 @@
     "ts-node": "~8.0.0",
     "tslint": "~5.12.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "wait-on": "^3.2.0"
   },
   "description": "An Ionic project"
 }
