--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ionic/angular": "^4.0.0",
     "@ngrx/effects": "^7.2.0",
     "@ngrx/store": "^7.2.0",
+    "@vitalets/google-translate-api": "^2.7.0",
     "core-js": "^2.5.4",
     "electron-is-dev": "^1.0.1",
     "google-auth-library": "^3.1.0",
