--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "electron-is-dev": "^1.0.1",
     "google-auth-library": "^3.1.0",
     "googleapis": "^37.2.0",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "npm": "^6.8.0",
     "rxjs": "~6.3.3",
+    "typeface-roboto": "0.0.54",
     "uuid": "^3.3.2",
     "zone.js": "~0.8.29"
   },
