--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloud-clips",
+  "name": "infiniti-cloud-clips",
   "version": "0.0.1",
   "author": "Gabriele Sato",
   "homepage": "",
@@ -19,7 +19,7 @@
   },
   "build": {
     "appId": "com.infiniti.cloud-clips",
-    "productName": "cloud-clips",
+    "productName": "Infiniti Cloud Clips",
     "directories": {
       "buildResources": "www"
     },
@@ -67,14 +67,14 @@
     "@angular-devkit/schematics": "~7.2.3",
     "@angular/cli": "~7.2.3",
     "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "^7.2.5",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.3.0",
+    "@types/electron-is-dev": "^0.3.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.12.0",
     "@types/uuid": "^3.4.4",
-    "@types/electron-is-dev": "^0.3.0",
     "codelyzer": "~4.5.0",
     "concurrently": "^4.1.0",
     "electron": "^4.0.4",
@@ -93,5 +93,5 @@
     "typescript": "~3.2.2",
     "wait-on": "^3.2.0"
   },
-  "description": "An Ionic project"
+  "description": "Infiniti Cloud Clips"
 }
