--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "infiniti-cloud-clips",
+  "name": "infiniti-clips",
   "version": "0.0.1",
   "author": "Gabriele Sato",
   "homepage": "",
@@ -18,8 +18,8 @@
     "dist": "npm run ionicBuild && npm run electronBuild && electron-builder"
   },
   "build": {
-    "appId": "com.infiniti.cloud-clips",
-    "productName": "Infiniti Cloud Clips",
+    "appId": "com.infiniti.clips",
+    "productName": "Infiniti Clips",
     "directories": {
       "buildResources": "www"
     },
@@ -93,5 +93,5 @@
     "typescript": "~3.2.2",
     "wait-on": "^3.2.0"
   },
-  "description": "Infiniti Cloud Clips"
+  "description": "Infiniti Clips"
 }
