partial google drive api implementation

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "ng build",
     "ionicBuild": "ionic build --prod -- --base-href ./",
     "electronBuild": "tsc -p ./src/electron",
+    "electronNoWait": "npm run electronBuild && electron .",
     "electron": "concurrently  \"SET BROWSER=none && npm run start\" \"npm run electronBuild\" \"wait-on http-get://localhost:4200 && electron .\"",
     "test": "ng test",
     "lint": "ng lint",
