--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.8",
-    "@angular/cdk": "^7.3.3",
+    "@angular/cdk": "^7.3.5",
     "@angular/common": "^7.2.2",
     "@angular/core": "^7.2.2",
     "@angular/forms": "^7.2.2",
@@ -46,12 +46,19 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.16",
+    "@fortawesome/free-brands-svg-icons": "^5.8.0",
+    "@fortawesome/free-solid-svg-icons": "^5.8.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
     "@ngrx/effects": "^7.2.0",
     "@ngrx/store": "^7.2.0",
+    "@ngx-share/button": "^7.1.2",
+    "@ngx-share/buttons": "^7.1.2",
+    "@ngx-share/core": "^7.1.2",
     "@vitalets/google-translate-api": "^2.7.0",
     "core-js": "^2.5.4",
     "electron-is-dev": "^1.0.1",
