--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "infiniti-clips",
   "version": "0.0.1",
   "author": "Gabriele Sato",
-  "homepage": "",
+  "homepage": "https://infiniticlips.com",
   "main": "www/electron/main.js",
   "scripts": {
     "ng": "ng",
@@ -82,6 +82,7 @@
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.3.0",
     "@types/electron-is-dev": "^0.3.0",
+    "@types/google.analytics": "0.0.39",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.12.0",
