--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "infiniti-clips",
   "version": "0.0.1",
-  "author": "Gabriele Sato",
+  "author": "Infiniti",
   "homepage": "https://infiniticlips.com",
   "repository": {
     "type": "git",
