--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@angular/cdk": "^7.3.5",
     "@angular/common": "^7.2.2",
     "@angular/core": "^7.2.2",
+    "@angular/fire": "^5.1.2",
     "@angular/forms": "^7.2.2",
     "@angular/http": "^7.2.2",
     "@angular/material": "^7.3.3",
@@ -80,6 +81,7 @@
     "auto-launch": "^5.0.5",
     "core-js": "^2.5.4",
     "electron-is-dev": "^1.0.1",
+    "firebase": "^5.9.1",
     "google-auth-library": "^3.1.0",
     "googleapis": "^37.2.0",
     "material-design-icons": "^3.0.1",
