--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "pack": "electron-builder --dir",
-    "dist": "npm run ionicBuild && npm run electronBuild && electron-builder",
+    "dist": "npm run ionicBuild && npm run electronBuild && electron-builder -p always",
     "publish": "npm run electron-builder -p always"
   },
   "build": {
@@ -88,6 +88,7 @@
     "@ngx-share/button": "^7.1.2",
     "@ngx-share/buttons": "^7.1.2",
     "@ngx-share/core": "^7.1.2",
+    "@types/quill": "^2.0.2",
     "@vitalets/google-translate-api": "^2.7.0",
     "auto-launch": "^5.0.5",
     "core-js": "^2.5.4",
@@ -99,6 +100,7 @@
     "googleapis": "^37.2.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
+    "quill": "^1.3.6",
     "rxjs": "~6.3.3",
     "universal-analytics": "^0.4.20",
     "uuid": "^3.3.2",
