--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "e2e": "ng e2e",
     "pack": "electron-builder --dir",
     "dist": "npm run ionicBuild && npm run electronBuild && electron-builder -p always",
-    "publish": "npm run electron-builder -p always"
+    "publish": "electron-builder -p always"
   },
   "build": {
     "appId": "com.infiniti.clips",
