--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ionicBuild": "ionic build --prod -- --base-href ./",
     "electronBuild": "tsc -p ./src/electron",
     "electronNoWait": "npm run electronBuild && electron .",
-    "electron": "concurrently  \"SET BROWSER=none && npm run start\" \"npm run electronBuild\" \"wait-on http-get://localhost:4200 && electron .\"",
+    "electron": "concurrently  \"set BROWSER=none && npm run start\" \"npm run electronBuild\" \"wait-on http-get://localhost:4200 && electron .\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -108,7 +108,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "^0.800.2",
+    "@angular-devkit/build-angular": "^0.12.4",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
     "@angular/cli": "~7.2.3",
