--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "electron-updater": "^4.0.6",
     "firebase": "^5.9.1",
     "google-auth-library": "^3.1.0",
-    "googleapis": "^37.2.0",
+    "googleapis": "^39.2.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "quill": "^1.3.6",
@@ -137,7 +137,7 @@
     "ts-node": "~8.0.0",
     "tslint": "~5.12.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "~3.2.2",
+    "typescript": "^3.2.2",
     "wait-on": "^3.2.0"
   },
   "description": "Infiniti Clips"
