--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,9 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
+  "engines": {
+    "node": "8"
+  },
   "main": "lib/index.js",
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
