--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "infiniti-clips",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "author": "Infiniti",
   "homepage": "https://infiniticlips.com",
   "repository": {
@@ -32,7 +32,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "pack": "electron-builder --dir",
-    "dist": "npm run ionicBuild && npm run electronBuild && electron-builder -p always",
+    "dist": "npm run ionicBuild && npm run electronBuild && electron-builder -mw -p always",
     "publish": "electron-builder -p always"
   },
   "build": {
@@ -144,7 +144,7 @@
     "ts-node": "~8.0.0",
     "tslint": "~5.12.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.2.2",
+    "typescript": "~3.2.0",
     "wait-on": "^3.2.0"
   },
   "description": "Infiniti Clips"
