--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "google-auth-library": "^3.1.0",
     "googleapis": "^39.2.0",
     "material-design-icons": "^3.0.1",
+    "memory-streams": "^0.1.3",
     "moment": "^2.24.0",
     "quill": "^1.3.6",
     "rxjs": "~6.3.3",
