--- a/package.json
+++ b/package.json
@@ -107,22 +107,22 @@
     "googleapis": "^39.2.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
-    "quill": "^1.3.6",
+    "quill": "^1.3.7",
     "rxjs": "~6.3.3",
     "universal-analytics": "^0.4.20",
     "uuid": "^3.3.2",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "^0.12.4",
-    "@angular-devkit/core": "~7.2.3",
-    "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler": "~7.2.2",
+    "@angular-devkit/architect": "^0.12.3",
+    "@angular-devkit/build-angular": "^0.10.0",
+    "@angular-devkit/core": "^7.2.3",
+    "@angular-devkit/schematics": "^7.2.3",
+    "@angular/cli": "^7.2.3",
+    "@angular/compiler": "^7.2.2",
     "@angular/compiler-cli": "^7.2.6",
-    "@angular/language-service": "~7.2.2",
-    "@ionic/angular-toolkit": "~1.3.0",
+    "@angular/language-service": "^7.2.2",
+    "@ionic/angular-toolkit": "^1.3.0",
     "@types/electron-is-dev": "^0.3.0",
     "@types/google.analytics": "0.0.39",
     "@types/jasmine": "~2.8.8",
