--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "quill": "^1.3.7",
+    "rxdb": "^8.5.0-beta.3",
     "rxjs": "~6.3.3",
     "universal-analytics": "^0.4.20",
     "uuid": "^3.3.2",
