--- a/package.json
+++ b/package.json
@@ -95,7 +95,6 @@
     "@ngx-share/button": "^7.1.2",
     "@ngx-share/buttons": "^7.1.2",
     "@ngx-share/core": "^7.1.2",
-    "@types/quill": "^2.0.2",
     "@vitalets/google-translate-api": "^2.7.0",
     "auto-launch": "^5.0.5",
     "core-js": "^2.5.4",
@@ -107,7 +106,7 @@
     "googleapis": "^39.2.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
-    "quill": "^1.3.7",
+    "pouchdb-adapter-idb": "^7.1.1",
     "rxdb": "^8.5.0-beta.3",
     "rxjs": "~6.3.3",
     "universal-analytics": "^0.4.20",
