--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^5.0.0",
+    "git-revision-webpack-plugin": "^3.0.4",
     "node-sass": "^4.13.1",
     "sass": "^1.24.4",
     "sass-loader": "^8.0.1",
