--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "uuidv4": "^6.0.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.1",
+    "vue-dompurify-html": "^2.1.1",
     "vue-gtag": "^1.6.1",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
