--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@sentry/integrations": "^5.12.0",
     "core-js": "^3.6.3",
     "electron-log": "^4.0.6",
+    "electron-push-receiver": "^2.1.3",
     "electron-store": "^5.1.0",
+    "firebase": "^7.9.3",
     "google-auth-library": "^5.9.2",
     "googleapis": "^47.0.0",
     "moment": "^2.24.0",
@@ -57,6 +59,7 @@
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.30",
     "auto-launch": "^5.0.5",
+    "copy-webpack-plugin": "^5.1.1",
     "electron": "^7.0.0",
     "electron-icon-builder": "^1.0.2",
     "eslint": "^5.16.0",
