--- a/package.json
+++ b/package.json
@@ -2,12 +2,30 @@
   "name": "clips",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://infiniticlips.com",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/azure06/clips.git"
+  },
+  "keywords": [
+    "clipboard",
+    "electron",
+    "vue-electron",
+    "vue",
+    "universal",
+    "windows",
+    "mac"
+  ],
+  "bugs": {
+    "url": "https://github.com/azure06/clips/issues"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
+    "electron:build": "vue-cli-service electron:build -mw",
+    "electron:publish": "npm run electron:build -- -p always",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
@@ -21,12 +39,12 @@
     "electron-log": "^4.0.6",
     "electron-push-receiver": "^2.1.3",
     "electron-store": "^5.1.0",
+    "electron-updater": "^4.2.5",
     "firebase": "^7.9.3",
     "google-auth-library": "^5.9.2",
     "googleapis": "^47.0.0",
     "moment": "^2.24.0",
     "pouchdb-adapter-idb": "^7.1.1",
-    "register-service-worker": "^1.6.2",
     "rxdb": "^8.7.5",
     "rxjs": "^6.5.4",
     "uuidv4": "^6.0.0",
