--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@sentry/electron": "^1.2.0",
     "@sentry/integrations": "^5.12.0",
+    "@types/universal-analytics": "^0.4.4",
     "core-js": "^3.6.3",
     "electron-log": "^4.0.6",
     "electron-push-receiver": "^2.1.3",
@@ -47,11 +48,11 @@
     "pouchdb-adapter-idb": "^7.1.1",
     "rxdb": "^8.7.5",
     "rxjs": "^6.5.4",
+    "universal-analytics": "^0.4.20",
     "uuidv4": "^6.0.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.1",
     "vue-dompurify-html": "^2.1.1",
-    "vue-gtag": "^1.6.1",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vue-rx": "^6.2.0",
@@ -72,7 +73,7 @@
     "@vue/cli-plugin-typescript": "^4.1.2",
     "@vue/cli-plugin-unit-jest": "^4.1.2",
     "@vue/cli-plugin-vuex": "^4.1.2",
-    "@vue/cli-service": "^4.1.2",
+    "@vue/cli-service": "^4.2.3",
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.30",
