--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clips",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "private": true,
   "homepage": "https://infiniticlips.com",
   "repository": {
@@ -45,6 +45,7 @@
     "google-auth-library": "^5.9.2",
     "googleapis": "^47.0.0",
     "moment": "^2.24.0",
+    "object-sizeof": "^1.6.0",
     "pouchdb-adapter-idb": "^7.1.1",
     "rxdb": "^8.7.5",
     "rxjs": "^6.5.4",
@@ -70,7 +71,7 @@
     "@vue/cli-plugin-eslint": "^4.1.2",
     "@vue/cli-plugin-pwa": "^4.1.2",
     "@vue/cli-plugin-router": "^4.1.2",
-    "@vue/cli-plugin-typescript": "^4.1.2",
+    "@vue/cli-plugin-typescript": "^4.3.1",
     "@vue/cli-plugin-unit-jest": "^4.1.2",
     "@vue/cli-plugin-vuex": "^4.1.2",
     "@vue/cli-service": "^4.2.3",
