--- a/package.json
+++ b/package.json
@@ -41,14 +41,21 @@
     "electron-store": "^6.0.1",
     "electron-updater": "^4.3.5",
     "firebase": "^7.23.0",
+    "fullname": "^4.0.1",
+    "get-port": "^5.1.1",
     "google-auth-library": "^6.1.1",
     "googleapis": "^61.0.0",
+    "install": "^0.13.0",
+    "local-devices": "^3.1.0",
     "moment": "^2.29.1",
+    "npm": "^6.14.8",
     "object-sizeof": "^1.6.1",
     "pouchdb-adapter-idb": "^7.2.2",
     "register-service-worker": "^1.7.1",
     "rxdb": "^9.6.0",
     "rxjs": "^6.6.3",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.1",
     "universal-analytics": "^0.4.23",
     "uuidv4": "^6.2.4",
     "vue": "^2.6.11",
@@ -65,6 +72,8 @@
     "@mdi/font": "^5.6.55",
     "@types/auto-launch": "^5.0.1",
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/socket.io": "^2.1.11",
+    "@types/socket.io-client": "^1.4.34",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
