--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   "dependencies": {
     "@sentry/electron": "^2.0.1",
     "@sentry/integrations": "^5.25.0",
-    "@types/universal-analytics": "^0.4.4",
     "core-js": "^3.6.5",
     "electron-log": "^4.2.4",
     "electron-push-receiver": "^2.1.3",
@@ -46,6 +45,7 @@
     "google-auth-library": "^6.1.1",
     "googleapis": "^61.0.0",
     "install": "^0.13.0",
+    "ip": "^1.1.5",
     "local-devices": "^3.1.0",
     "moment": "^2.29.1",
     "npm": "^6.14.8",
@@ -82,6 +82,8 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "@types/ip": "^1.1.0",
+    "@types/universal-analytics": "^0.4.4",
     "auto-launch": "^5.0.5",
     "copy-webpack-plugin": "^6.2.1",
     "electron": "^9.0.0",
