--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "lint": "eslint -c .eslintrc.js --ext ts,vue ./src",
+    "lint:fix": "eslint -c .eslintrc.js --ext ts,vue ./src --fix",
     "electron:build": "vue-cli-service electron:build -mw",
     "electron:publish": "npm run electron:build -- -p always",
     "electron:serve": "vue-cli-service electron:serve",
@@ -70,8 +71,12 @@
     "@mdi/font": "^5.6.55",
     "@types/auto-launch": "^5.0.1",
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/ip": "^1.1.0",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
+    "@types/universal-analytics": "^0.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -80,14 +85,13 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@types/ip": "^1.1.0",
-    "@types/universal-analytics": "^0.4.4",
     "auto-launch": "^5.0.5",
     "copy-webpack-plugin": "^6.2.1",
     "electron": "^9.0.0",
     "electron-devtools-installer": "^3.1.0",
     "electron-icon-builder": "^1.0.2",
     "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.0.1",
     "git-revision-webpack-plugin": "^3.0.6",
