keep implementing socket connection

--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "get-port": "^5.1.1",
     "google-auth-library": "^6.1.1",
     "googleapis": "^61.0.0",
-    "ip": "^1.1.5",
+    "internal-ip": "^6.1.0",
     "local-devices": "^3.1.0",
+    "macaddress": "^0.5.1",
     "moment": "^2.29.1",
     "object-sizeof": "^1.6.1",
     "pouchdb-adapter-idb": "^7.2.2",
@@ -71,7 +72,6 @@
     "@mdi/font": "^5.6.55",
     "@types/auto-launch": "^5.0.1",
     "@types/electron-devtools-installer": "^2.2.0",
-    "@types/ip": "^1.1.0",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
     "@types/universal-analytics": "^0.4.4",
