--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "clips",
+  "author": "Gabriele Sato",
+  "description": "Simple, Reliable Clipboard",
   "version": "0.1.7",
   "private": true,
   "homepage": "https://infiniticlips.com",
@@ -24,7 +26,7 @@
     "build": "vue-cli-service build",
     "lint": "eslint -c .eslintrc.js --ext ts,vue ./src",
     "lint:fix": "eslint -c .eslintrc.js --ext ts,vue ./src --fix",
-    "electron:build": "vue-cli-service electron:build -mw",
+    "electron:build": "vue-cli-service electron:build -m",
     "electron:publish": "npm run electron:build -- -p always",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
@@ -90,6 +92,7 @@
     "electron": "^9.0.0",
     "electron-devtools-installer": "^3.1.0",
     "electron-icon-builder": "^1.0.2",
+    "electron-notarize": "^1.0.0",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
