--- a/functions/package.json
+++ b/functions/package.json
@@ -10,19 +10,21 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "12"
   },
   "main": "lib/index.js",
   "dependencies": {
     "@sendgrid/mail": "^6.5.4",
     "cors": "^2.8.5",
     "firebase-admin": "^9.4.2",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.13.1",
+    "stripe": "^8.137.0"
   },
   "devDependencies": {
-    "tslint": "^5.12.0",
-    "typescript": "^3.2.2",
-    "firebase-functions-test": "^0.1.6"
+    "@types/fs-extra": " 8.1.0",
+    "firebase-functions-test": "^0.1.6",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.5"
   },
   "private": true
 }
