--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,8 @@
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run build"
-    ]
+    ],
+    "source": "functions"
   },
   "storage": {
     "rules": "storage.rules"
@@ -21,6 +22,9 @@
     },
     "firestore": {
       "port": 8080
+    },
+    "ui": {
+      "enabled": true
     }
   }
 }
