--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,10 @@
     "cors": "^2.8.5",
     "firebase-admin": "^9.4.2",
     "firebase-functions": "^3.13.1",
-    "stripe": "^8.137.0"
+    "install": "^0.13.0",
+    "npm": "^7.5.4",
+    "stripe": "^8.137.0",
+    "uuidv4": "^6.2.6"
   },
   "devDependencies": {
     "@types/fs-extra": " 8.1.0",
