Add image editor

--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
   "dependencies": {
     "@sentry/electron": "^2.2.0",
     "@sentry/integrations": "^5.30.0",
+    "@toast-ui/vue-image-editor": "^3.12.0",
     "core-js": "^3.6.5",
     "electron-log": "^4.2.4",
     "electron-store": "^6.0.1",
     "electron-updater": "^4.3.5",
-    "firebase": "^8.2.1",
-    "firebase-admin": "^9.5.0",
+    "firebase": "^8.2.9",
     "fullname": "^4.0.1",
     "get-port": "^5.1.1",
     "google-auth-library": "^6.1.1",
