--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clips",
   "author": "Gabriele Sato",
   "description": "Simple, Reliable Clipboard",
-  "version": "0.1.21",
+  "version": "0.2.0",
   "private": true,
   "homepage": "https://infiniticlips.com",
   "repository": {
@@ -37,7 +37,7 @@
   "dependencies": {
     "@sentry/electron": "^2.4.0",
     "@sentry/integrations": "^6.2.0",
-    "@toast-ui/vue-image-editor": "^3.12.0",
+    "@toast-ui/vue-image-editor": "^3.14.0",
     "core-js": "^3.6.5",
     "electron-log": "^4.2.4",
     "electron-store": "^7.0.2",
@@ -47,10 +47,12 @@
     "google-auth-library": "^6.1.1",
     "googleapis": "^61.0.0",
     "internal-ip": "^6.1.0",
+    "leveldown": "^5.6.0",
     "local-devices": "^3.1.0",
     "macaddress": "^0.5.1",
     "moment": "^2.29.1",
     "pouchdb-adapter-idb": "^7.2.2",
+    "pouchdb-adapter-leveldb": "^7.2.2",
     "register-service-worker": "^1.7.1",
     "rxdb": "^9.15.0",
     "rxjs": "^6.6.6",
@@ -72,7 +74,9 @@
     "@mdi/font": "^5.6.55",
     "@types/auto-launch": "^5.0.1",
     "@types/electron-devtools-installer": "^2.2.0",
-    "@types/ramda": "^0.27.32",
+    "@types/leveldown": "^4.0.2",
+    "@types/pouchdb-adapter-idb": "^6.1.3",
+    "@types/pouchdb-adapter-leveldb": "^6.1.3",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
     "@types/universal-analytics": "^0.4.4",
@@ -88,9 +92,9 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "auto-launch": "^5.0.5",
     "copy-webpack-plugin": "^6.2.1",
-    "electron": "^9.0.0",
+    "electron": "^9.4.4",
     "electron-devtools-installer": "^3.1.0",
-    "electron-icon-builder": "^1.0.2",
+    "electron-icon-builder": "^2.0.1",
     "electron-notarize": "^1.0.0",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
