--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clips",
   "author": "Gabriele Sato",
   "description": "Simple, Reliable Clipboard",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "private": true,
   "homepage": "https://infiniticlips.com",
   "repository": {
@@ -37,7 +37,7 @@
   "dependencies": {
     "@sentry/electron": "^2.4.0",
     "@sentry/integrations": "^6.2.0",
-    "@toast-ui/vue-image-editor": "^3.14.0",
+    "@toast-ui/vue-image-editor": "^3.14.2",
     "core-js": "^3.6.5",
     "electron-log": "^4.2.4",
     "electron-store": "^7.0.2",
@@ -53,6 +53,7 @@
     "moment": "^2.29.1",
     "pouchdb-adapter-idb": "^7.2.2",
     "pouchdb-adapter-leveldb": "^7.2.2",
+    "quill": "^1.3.7",
     "register-service-worker": "^1.7.1",
     "rxdb": "^9.15.0",
     "rxjs": "^6.6.6",
@@ -77,6 +78,7 @@
     "@types/leveldown": "^4.0.2",
     "@types/pouchdb-adapter-idb": "^6.1.3",
     "@types/pouchdb-adapter-leveldb": "^6.1.3",
+    "@types/quill": "^2.0.6",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
     "@types/universal-analytics": "^0.4.4",
