--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clips",
   "author": "Gabriele Sato",
   "description": "Simple, Reliable Clipboard",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "private": true,
   "homepage": "https://infiniticlips.com",
   "repository": {
@@ -35,38 +35,39 @@
   },
   "main": "background.js",
   "dependencies": {
-    "@sentry/electron": "^2.4.0",
-    "@sentry/integrations": "^6.2.0",
-    "@toast-ui/vue-image-editor": "^3.14.2",
+    "@azure06/vue-rx": "^6.2.0",
+    "@sentry/electron": "^3.0.4",
+    "@sentry/integrations": "^6.18.2",
+    "@toast-ui/vue-image-editor": "^3.15.2",
     "core-js": "^3.6.5",
+    "electron-builder": "^22.11.7",
     "electron-log": "^4.2.4",
     "electron-store": "^7.0.2",
-    "electron-updater": "^4.3.5",
+    "electron-updater": "^4.6.5",
     "fullname": "^4.0.1",
     "get-port": "^5.1.1",
     "google-auth-library": "^7.0.2",
-    "googleapis": "^68.0.0",
+    "googleapis": "^92.0.0",
     "internal-ip": "^6.1.0",
-    "leveldown": "^5.6.0",
+    "leveldown": "^6.1.0",
     "local-devices": "^3.1.0",
-    "macaddress": "^0.5.1",
+    "macaddress": "^0.5.2",
     "moment": "^2.29.1",
     "pouchdb-adapter-idb": "^7.2.2",
     "pouchdb-adapter-leveldb": "^7.2.2",
     "quill": "^1.3.7",
     "register-service-worker": "^1.7.1",
     "rxdb": "^9.15.0",
-    "rxjs": "^6.6.6",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.1",
+    "rxjs": "^7.1.0",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "universal-analytics": "^0.4.23",
-    "uuidv4": "^6.2.4",
-    "vue": "^2.6.11",
+    "uuidv4": "^6.2.12",
+    "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-dompurify-html": "^2.3.0",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
-    "vue-rx": "^6.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
     "vuex-class": "^0.3.2"
@@ -75,21 +76,21 @@
     "@mdi/font": "^5.6.55",
     "@types/auto-launch": "^5.0.1",
     "@types/electron-devtools-installer": "^2.2.0",
-    "@types/leveldown": "^4.0.2",
+    "@types/leveldown": "^4.0.3",
     "@types/pouchdb-adapter-idb": "^6.1.3",
     "@types/pouchdb-adapter-leveldb": "^6.1.3",
     "@types/quill": "^2.0.6",
-    "@types/socket.io": "^2.1.11",
-    "@types/socket.io-client": "^1.4.34",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^1.4.36",
     "@types/universal-analytics": "^0.4.4",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-pwa": "^4.5.15",
+    "@vue/cli-plugin-router": "^4.5.15",
+    "@vue/cli-plugin-typescript": "^4.5.15",
+    "@vue/cli-plugin-vuex": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "auto-launch": "^5.0.5",
@@ -103,11 +104,10 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.0.1",
     "git-revision-webpack-plugin": "^3.0.6",
-    "node-sass": "^4.12.0",
-    "sass": "^1.19.0",
+    "sass": "^1.43.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
+    "typescript": "^4.5.2",
+    "vue-cli-plugin-electron-builder": "^2.1.1",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
