lintfix import order

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "clips",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "private": true,
   "description": "Simple, Reliable Clipboard",
   "author": "Gabriele Sato",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "eslint -c .eslintrc.js --fix --ext ts,vue ./src",
+    "lint": "eslint -c .eslintrc.js --ext ts,vue ./src",
     "electron:build": "vue-cli-service electron:build",
     "electron:generate-icons": "electron-icon-builder --input=./public/icon.png --output=build --flatten",
     "electron:publish": "npm run electron:build -- -p always",
@@ -22,6 +22,9 @@
     "@sentry/integrations": "^6.18.2",
     "@sentry/vue": "^7.17.2",
     "@toast-ui/vue-image-editor": "^3.15.2",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "core-js": "^3.6.5",
     "electron-log": "^4.4.8",
     "electron-store": "^7.0.2",
@@ -65,26 +68,25 @@
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^1.4.36",
     "@types/universal-analytics": "^0.4.4",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "@vue/cli-plugin-babel": "^4.5.15",
     "@vue/cli-plugin-pwa": "^4.5.15",
     "@vue/cli-plugin-router": "^4.5.15",
     "@vue/cli-plugin-typescript": "^4.5.15",
     "@vue/cli-plugin-vuex": "^4.5.15",
     "@vue/cli-service": "^4.5.15",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
     "auto-launch": "^5.0.5",
     "copy-webpack-plugin": "^6.2.1",
     "electron": "^21.2.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-icon-builder": "^2.0.1",
     "electron-notarize": "^1.2.2",
-    "eslint": "^7.14.0",
+    "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^7.0.1",
+    "eslint-plugin-vue": "^9.7.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "sass": "^1.43.5",
     "sass-loader": "^8.0.2",
