--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "git-revision-webpack-plugin": "^3.0.6",
     "sass": "^1.43.5",
     "sass-loader": "^8.0.2",
-    "typescript": "^4.5.2",
+    "typescript": "~4.5.2",
     "vue-cli-plugin-electron-builder": "^3.0.0-alpha.4",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "2.7.10",
