--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "vue-class-component": "^7.2.6",
     "vue-dompurify-html": "^3.1.1",
     "vue-property-decorator": "^9.1.2",
+    "vue-qrcode-component": "^2.1.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.12",
     "vuex": "^3.4.0",
