--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "eslint -c .eslintrc.js --ext ts,vue ./src",
-    "electron:build": "vue-cli-service electron:build -mw",
+    "electron:build": "vue-cli-service electron:build -w",
     "electron:generate-icons": "electron-icon-builder --input=./public/icon.png --output=build --flatten",
     "electron:publish": "npm run electron:build -- -p always",
     "electron:serve": "vue-cli-service electron:serve",
@@ -39,6 +39,7 @@
     "moment": "^2.29.4",
     "pouchdb-adapter-idb": "^7.3.0",
     "pouchdb-adapter-leveldb": "^7.3.0",
+    "qrcode.vue": "^1.7.0",
     "quill": "^1.3.7",
     "register-service-worker": "^1.7.1",
     "rxdb": "^9.20.0",
@@ -51,7 +52,6 @@
     "vue-class-component": "^7.2.6",
     "vue-dompurify-html": "^3.1.1",
     "vue-property-decorator": "^9.1.2",
-    "vue-qrcode-component": "^2.1.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.12",
     "vuex": "^3.4.0",
